--- a/style.css
+++ b/style.css
@@ -347,3 +347,37 @@ footer {
     gap: 30px;
     flex-wrap: wrap;
 }
+.containers {
+    max-width: 400px;
+    /* margin: 0; */
+    margin-top: 20%;
+    margin-left: 35%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 8px;
+    font-size: 16px;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.error-message {
+    color: red;
+    margin-top: 10px;
+}
