--- a/style.css
+++ b/style.css
@@ -252,6 +252,13 @@ header {
 
 .logo {
     height: 46px;
+    filter: grayscale(100%);
+    opacity: 0.75;
+}
+.logo:hover{
+    filter: grayscale(0%);
+    opacity: 1;
+    cursor: pointer;
 }
 
 /* features section */
