--- a/style.css
+++ b/style.css
@@ -16,9 +16,19 @@
     --padding-inline-section: 20px;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     color: var(--primary-text-color);
+}
+
+body:has(.containers) {
+    display: flex;
+    justify-content: center;
+    place-items: center;
 }
 
 h1 {
@@ -419,8 +429,6 @@ footer {
 .containers {
     max-width: 400px;
     /* margin: 0; */
-    margin-top: 20%;
-    margin-left: 35%;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
