Update display property and justify-content in .nav-links

--- a/style.css
+++ b/style.css
@@ -250,7 +250,10 @@ body#signup-page .containers,
 }
 
 .nav-links {
-    display: none;
+   
+    display: flex;
+
+    justify-content: flex-start;
 }
 
 .nav-toggle {
