Fixes hover on Companies logo

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ ul {
     list-style: none;
 }
 
+
 /* utility classes */
 
 .small-bold-text {
@@ -86,7 +87,7 @@ ul {
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
     text-align: center;
-    margin-top:6px;
+    margin-top: 6px;
 }
 
 .primary-button:hover {
@@ -100,7 +101,7 @@ ul {
     color: var(--primary-text-color) !important;
     padding: 5px 40px;
     transition: 0.2s ease-out;
-    margin-top:6px;
+    margin-top: 6px;
 }
 
 .secondary-button:hover {
@@ -109,6 +110,7 @@ ul {
     transform: scale(1.02);
     transition: 0.3s ease-in-out;
 }
+
 
 /* top banner */
 
@@ -124,28 +126,24 @@ ul {
     text-align: center;
 }
 
+
 /* nav bar */
 
 .main-nav {
     margin-top: 40px;
     justify-content: space-between;
-
     position: fixed;
     top: 0;
     width: 100%;
     padding: 10px 0;
     margin-left: 50px;
-
     background-color: #ccc
 }
 
 .company-logo img {
     width: 200px;
-
     visibility: visible;
-
     padding: 20px;
-
 }
 
 .nav-links {
@@ -156,38 +154,32 @@ ul {
     justify-content: end;
     gap: 40px;
 }
-.nav-links a{
-    border: 1px transparent solid;
-    border-radius: 2px;
-    padding:4px;
-
-}
-.nav-links a:hover{
-    background-color: #ebf2fa;
-
-
-.nav-links ul {
-   list-style: none;
-   padding: 0;
-   margin: 0;
-}
-
-.nav-links ul li {
-    display: inline;
-    margin-right: 20px;
-    white-space: nowrap;
-}
-
-.nav-links ul li:last-child {
-    margin-right: 0;
-}
 
 .nav-links a {
-    text-decoration: none;
-    color: black
+    border: 1px transparent solid;
+    border-radius: 2px;
+    padding: 4px;
 }
 
-
+.nav-links a:hover {
+    background-color: #ebf2fa;
+    .nav-links ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+    .nav-links ul li {
+        display: inline;
+        margin-right: 20px;
+        white-space: nowrap;
+    }
+    .nav-links ul li:last-child {
+        margin-right: 0;
+    }
+    .nav-links a {
+        text-decoration: none;
+        color: black
+    }
 }
 
 .nav-toggle {
@@ -198,11 +190,9 @@ ul {
     .nav-links {
         display: none;
     }
-
     .nav-toggle {
         display: block;
     }
-
     .nav-links.active {
         display: block;
     }
@@ -236,6 +226,7 @@ header {
     width: 100%;
 }
 
+
 /* companies section */
 
 .companies-header {
@@ -250,9 +241,15 @@ header {
     gap: 20px;
 }
 
+.logos :hover {
+    transform: scale(1.20);
+    transition: 0.7s ease-in-out;
+}
+
 .logo {
     height: 46px;
 }
+
 
 /* features section */
 
@@ -285,7 +282,8 @@ header {
     max-width: 30%;
     text-align: center;
 }
-.features-card:hover{
+
+.features-card:hover {
     transform: scale(1.02);
     transition: 0.3s ease-in-out;
 }
@@ -293,6 +291,7 @@ header {
 .features-card img {
     width: 60px;
 }
+
 
 /* big feature section */
 
@@ -316,6 +315,7 @@ header {
     flex-direction: column;
     align-items: flex-start;
 }
+
 
 /* examples section */
 
@@ -367,6 +367,7 @@ header {
     color: white;
 }
 
+
 /* cta section */
 
 .cta-section-container {
@@ -386,6 +387,7 @@ header {
     margin-top: 20px;
 }
 
+
 /* footer */
 
 footer {
@@ -404,6 +406,7 @@ footer {
     justify-content: space-between;
 }
 
+
 /* subfooter */
 
 .subfooter {
@@ -416,6 +419,7 @@ footer {
     gap: 30px;
     flex-wrap: wrap;
 }
+
 .containers {
     max-width: 400px;
     /* margin: 0; */
@@ -450,5 +454,3 @@ button {
     color: red;
     margin-top: 10px;
 }
-
-
