changed the font color of the Sign Up button as it was not visible while hovering

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ ul {
     background-color: var(--accent-color);
     border-radius: 6px;
     font-weight: 700;
-    color: white !important;
+    color: rgb(48, 46, 46) !important;
     padding: 5px 40px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
