--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ ul {
     background-image: url('asset\ 30.png');
     background-color: #4fb3d4;
     background-size: 300px;
+    padding: 20px;
+    text-align: center;
+    margin-top: 60px; /* Ensure the banner is not hidden behind the navbar */
+
 }
 
 .banner-text {
@@ -129,13 +133,14 @@ ul {
 .main-nav {
     margin-top: 40px;
     justify-content: space-between;
-
+    z-index: 1000;
     position: fixed;
+    left: 0;
     top: 0;
     width: 100%;
-    padding: 10px 0;
+    padding: 3px 0;
     margin-left: 50px;
-
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     background-color: #ccc
 }
 
@@ -213,6 +218,7 @@ ul {
 
 header {
     padding: 50px var(--padding-inline-section) 0;
+    margin-top: 100px; /* Add margin to push content below the navbar */
 }
 
 .header-section {
