navbar functionality is modified

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ nav {
     padding: 10px 0;
     margin-left: 50px;
 
-    background-color: #ccc
+    background-color: #1f1d1d
 }
 
 .company-logo img {
