--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-    --primary-text-color: #fff;
+    --primary-text-color: #080707;
     --secondary-text-color: #000;
     --accent-color: #2294ed;
     --accent-color-dark: #1d69a3;
@@ -153,7 +153,7 @@ ul {
 
 /* nav bar */
 nav {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
@@ -161,12 +161,13 @@ nav {
     background-color: #ccc;
     z-index: 1000;
 }
+
 .main-nav {
     margin-top: 40px;
     justify-content: space-between;
-
-    position: fixed;
     top: 0;
+    position: sticky;
+    
     width: 100%;
     padding: 10px 0;
     margin-left: 50px;
