--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ ul {
 .get {
     background-color: rgb(138, 31, 231);
     text-decoration: none;
+    border-radius: 20px;
+}
+
+.get:hover{
+  background-color: green;
 }
 
 
@@ -133,7 +138,7 @@ nav {
 }
 
 .company-logo img {
-    width: 200px;
+    width: 250px;
 
     visibility: visible;
 
