--- a/style.css
+++ b/style.css
@@ -654,3 +654,24 @@ button {
   background: linear-gradient(270deg, #e4f1ff, #cce5ff);
   color: var(--accent-color);
 }
+#backToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  width:min-content ;
+  border: none;
+  outline: none;
+  background-color: #1187e2;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size:x-large;
+  
+}
+
+#backToTopBtn:hover {
+  background-color: #6bb4e8;
+}
